--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    font-family: "Playfair Display", serif;
+    font-size: 24px;
+    line-height: 1.67;
+    letter-spacing: 0.7px;
+    color: #2d2d2d;
+}
+
 .wrapper {
     max-width: 960px;
     margin: 0 auto;
@@ -18,12 +26,4 @@
     font-size: 48px;
     letter-spacing: -0.87px;
     color: #000000;
-}
-
-.content {
-    font-family: "Playfair Display", serif;
-    font-size: 24px;
-    line-height: 1.67;
-    letter-spacing: 0.7px;
-    color: #2d2d2d;
 }
